<resources>
    <string name="app_name">Week04_27328</string>
    <string name="text1">Pindah Ke Activity 2</string>
    <string name="text2">Kirim</string>
    <string name="text3">Browse</string>
    <string name="text4">Teks yang dikirim</string>
    <string name="text5">Halaman website (ex : https://...)</string>
    <string name="text6">Balas</string>
    <string name="text7">Pidanh</string>
    <string name="text8">Pindah2</string>
    <string name="text9">This is top fragment</string>
    <string name="text10">Fragment</string>
    <string name="text11">This is bottom fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>